@@ -1,6 +1,11 @@
+2014-06-02  Barton E. Schaefer  <schaefer@zsh.org>
+
+	* 36526 (via Jun T. via waltarix on github): when __APPLE__ is
+	defined at compile, normalize Unicode filenames in zreaddir()
+
 2014-06-02  Peter Stephenson  <p.stephenson@samsung.com>
 
-	* Daniel Sharaf: users/18870: Src/glob.c, Test/D02glob.ztst:
+	* Daniel Shahaf: users/18870: Src/glob.c, Test/D02glob.ztst:
 	glob scanner needed some coaxing with counting matches with (Y)
 	glob qualifier.
 
